--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.context-path=/
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/sakila
 spring.datasource.username=root
-spring.datasource.password=java1234
+spring.datasource.password=wkqk1234
 spring.jpa.hibernate.ddl-auto=none
 
 # log config
